--- a/print/a2ps/Makefile
+++ b/print/a2ps/Makefile
@@ -3,71 +3,53 @@
 # Date created:         18 August 1997
 # Whom:                 Chuck Robey (chuckr@freebsd.org)
 #
+# $NetBSD: Makefile,v 1.2 1998/02/16 17:43:24 agc Exp $
 # FreeBSD Id: Makefile,v 1.12 1998/02/15 21:24:42 steve Exp
 #
 
 DISTNAME=	a2ps-4.9.9
-PKGNAME=	a2ps-${PAPERSIZE}-4.9.9
+PKGNAME=	a2ps-${PAPER_SIZE}-4.9.9
 CATEGORIES=	print
 MASTER_SITES=	http://www-inf.enst.fr/~demaille/ftp/a2ps/
 
 MAINTAINER=	chuckr@FreeBSD.org
 
-MANUAL_PACKAGE_BUILD=	PAPERSIZE has to be set to Letter A4
 GNU_CONFIGURE=	yes
 MAN1=		a2ps.1 ogonkify.1
 
-PAPERSIZE?=
+PAPER_SIZE?=
 STRIP=
-CONFIGURE_ARGS=	--with-medium=$(PAPERSIZE)
+CONFIGURE_ARGS+=	--with-medium=${PAPER_SIZE}
 
-Letter::
-	$(MAKE) PAPERSIZE=Letter
-
-letter::
-	$(MAKE) PAPERSIZE=Letter
-
-Letterdj::
-	$(MAKE) PAPERSIZE=Letterdj
-
-letterdj::
-	$(MAKE) PAPERSIZE=Letterdj
-
-A4::
-	$(MAKE) PAPERSIZE=A4
-
-a4::
-	$(MAKE) PAPERSIZE=A4
+ALL_TARGET=	all PAPERSIZE=${PAPER_SIZE}
 
 pre-build:
 	${TOUCH} $(WRKSRC)/doc/*.info
 	${TOUCH} $(WRKSRC)/doc/*.dvi
 
 pre-configure:
-.if empty(PAPERSIZE)
-	@${ECHO}
-	@${ECHO} "PAPERSIZE not specified."
-	@${ECHO}
-	@${ECHO} "Must specify PAPERSIZE as one of A4, Letter, or Letterdj, either"
-	@${ECHO} "using setenv, or via Makefile targets of the same name.  Note"
-	@${ECHO} "that each PAPERSIZE has a leading capital letter, and Letterdj"
-	@${ECHO} "allows a slightly larger margins for DeskJets."
-	@false
-.elif $(PAPERSIZE)!=A4 && $(PAPERSIZE)!=Letter && $(PAPERSIZE)!=Letterdj
-	@${ECHO}
-	@${ECHO} "PAPERSIZE incorrect value: $(PAPERSIZE)."
-	@${ECHO}
-	@${ECHO} "Must specify PAPERSIZE as one of A4, Letter, or Letterdj, either"
-	@${ECHO} "using setenv, or via Makefile targets of the same name.  Note"
-	@${ECHO} "that each PAPERSIZE has a leading capital letter, and Letterdj"
-	@${ECHO} "allows a slightly larger margins for DeskJets."
-	@false
-.endif
-	${ECHO} $(PAPERSIZE) > $(WRKDIR)/.media
+	@(case "X${PAPER_SIZE}" in 					\
+	XA4|XLetter|XLetterdj) 						\
+		goodsize=yes; 						\
+		;; 							\
+	X"") 								\
+		goodsize=no; 						\
+		${ECHO} "PAPER_SIZE not specified."; 			\
+		;; 							\
+	*) 								\
+		goodsize=no; 						\
+		${ECHO} "PAPER_SIZE incorrect value: $(PAPER_SIZE)."; 	\
+		;; 							\
+	esac; 								\
+	if [ $goodsize = "no" ]; then 					\
+		${ECHO} ""; 						\
+		${ECHO} "Must specify PAPER_SIZE as one of A4, Letter,"; \
+		${ECHO} " or Letterdj, either in the environment, or ";	\
+		${ECHO} "via Makefile definitions of the same name. ";	\
+		${ECHO} " Note that each PAPER_SIZE has a leading "; 	\
+		${ECHO} "capital letter, and Letterdj allows a ";	\
+		${ECHO} "slightly larger margins for DeskJets.";	\
+		false; 							\
+	fi)
 
 .include <bsd.port.mk>
-
-.if exists($(WRKDIR)/.media)
-PAPERSIZE=
-PAPERSIZE!=	${CAT} $(WRKDIR)/.media
-.endif
