--- a/comms/minicom/Makefile
+++ b/comms/minicom/Makefile
@@ -4,7 +4,7 @@
 # Date created:         Fri Dec 01, 1995
 # Whom:                 obrien@cs.ucdavis.edu
 #
-# $NetBSD: Makefile,v 1.2 1998/02/11 22:04:29 tron Exp $
+# $NetBSD: Makefile,v 1.3 1998/02/17 23:54:23 tron Exp $
 # $FreeBSD Id: Makefile,v 1.13 1998/01/03 10:58:40 obrien Exp
 #
 
@@ -20,6 +20,8 @@ RUN_DEPENDS=	lrz:${PORTSDIR}/comms/lrzsz \
 		kermit:${PORTSDIR}/comms/kermit
 
 WRKSRC=		${WRKDIR}/${PKGNAME}/src
+IS_INTERACTIVE=	yes
+
 MAN1=		minicom.1 runscript.1 ascii-xfr.1
 
 .if !defined(BATCH)
