--- a/sysutils/top/Makefile
+++ b/sysutils/top/Makefile
@@ -3,7 +3,7 @@
 # Date created:         25 Sep 1994
 # Whom:                 swallace
 #
-# $NetBSD: Makefile,v 1.7 1998/02/16 19:40:11 tron Exp $
+# $NetBSD: Makefile,v 1.8 1998/02/20 07:19:40 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.14 1997/04/30 23:49:14 asami Exp
 #
 
@@ -16,12 +16,23 @@ MAINTAINER=	agc@netbsd.org
 HAS_CONFIGURE=		yes
 CONFIGURE_SCRIPT=	Configure
 
+OPSYS!= uname -s
+.if (${OPSYS} == "FreeBSD")
+.if exists(/etc/make.conf)
+.include "/etc/make.conf"
+.endif
+.else
+.if exists(/etc/mk.conf)
+.include "/etc/mk.conf" 
+.endif
+.endif
+
 MAKE_ENV+=	INSTALL_MAN="${INSTALL_MAN}" \
-		COPY="${COPY}" STRIPFLAG="${STRIPFLAG}"
+		COPY="${COPY}" STRIPFLAG="${STRIPFLAG}" \
+		UVM=${UVM}
 
 MAN1=			top.1
 
-OPSYS!= uname -s
 
 .if (${OPSYS} == "FreeBSD")
 OSVERSION!=	sysctl -n kern.osreldate
