--- a/net/ncftp2/Makefile
+++ b/net/ncftp2/Makefile
@@ -3,6 +3,7 @@
 # Date created:         4 Nov 1994
 # Whom:                 ache
 #
+# $NetBSD: Makefile,v 1.2 1998/02/20 14:28:46 tron Exp $
 # $FreeBSD Id: Makefile,v 1.39 1998/01/31 17:49:48 jseger Exp
 #
 
@@ -12,12 +13,14 @@ MASTER_SITES=   ftp://ftp.ncftp.com/ncftp/
 
 MAINTAINER=	ache@FreeBSD.ORG
 
+LIB_DEPENDS=	ncurses.3.4:${PORTSDIR}/devel/ncurses
+
 GNU_CONFIGURE=  yes
-CONFIGURE_ENV=  ac_cv_func_getmaxyx=yes ac_cv_lib_readline=yes
+CONFIGURE_ARGS+=	--with-curses=${PREFIX} --disable-readline
 MAN1=		ncftp2.1
 
 do-install:
-	$(INSTALL_PROGRAM) $(WRKSRC)/ncftp $(PREFIX)/bin/ncftp2
-	$(INSTALL_MAN) $(WRKSRC)/ncftp.1 $(PREFIX)/man/man1/ncftp2.1
+	${INSTALL_PROGRAM} ${WRKSRC}/ncftp ${PREFIX}/bin/ncftp2
+	${INSTALL_MAN} ${WRKSRC}/ncftp.1 ${PREFIX}/man/man1/ncftp2.1
 
 .include <bsd.port.mk>
