--- a/textproc/rfcutil/Makefile
+++ b/textproc/rfcutil/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2001/03/05 23:37:15 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 2001/03/14 16:17:07 zuntum Exp $
 #
 
 DISTNAME=	rfc-3.1
@@ -7,11 +7,11 @@ CATEGORIES=	textproc
 MASTER_SITES=	http://www.dewn.com/rfc/
 EXTRACT_SUFX=	#
 
-MAINTAINER=	zuntum@eik.pl
+MAINTAINER=	zuntum@netbsd.org
 HOMEPAGE=	http://www.dewn.com/rfc/
 COMMENT=	Search for RFCs and do ports, services & protocol lookups
 
-DEPEND+=	w3m-[0-9]*:../../www/w3m
+DEPENDS+=	w3m-[0-9]*:../../www/w3m
 
 WRKSRC=		${WRKDIR}
 EXTRACT_ONLY=	#
