--- a/audio/Makefile
+++ b/audio/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.86 2001/03/13 13:24:36 wiz Exp $
+# $NetBSD: Makefile,v 1.87 2001/03/14 16:25:17 skrll Exp $
 #
 
 COMMENT=	Audio tools
@@ -58,6 +58,7 @@ SUBDIR+=	guspatches
 SUBDIR+=	icecast
 SUBDIR+=	id3ed
 SUBDIR+=	kdemultimedia
+SUBDIR+=	kdemultimedia2
 SUBDIR+=	krio
 SUBDIR+=	lame
 SUBDIR+=	libac3
