--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.76 2001/03/14 12:17:42 agc Exp $
+# $NetBSD: Makefile,v 1.77 2001/03/15 13:07:37 hubertf Exp $
 #
 
 COMMENT=	Text processing utilities (does not include desktop publishing)
 
 SUBDIR+=	antiword
+SUBDIR+=	astyle
 SUBDIR+=	catdoc
 SUBDIR+=	cdif
 SUBDIR+=	detex
