--- a/devel/astyle/Makefile
+++ b/devel/astyle/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.1.1.1 2001/03/15 13:32:35 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 2001/03/15 13:38:58 hubertf Exp $
 #
 
 DISTNAME=	astyle_1.13.6.1
 PKGNAME=	astyle-1.13.6.1
-CATEGORIES=	textproc
+CATEGORIES=	textproc devel
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=astyle/}
 EXTRACT_SUFX=	.zip
 
