--- a/graphics/gqview/Makefile
+++ b/graphics/gqview/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2001/03/04 09:12:06 jlam Exp $
+# $NetBSD: Makefile,v 1.15 2001/03/15 14:55:23 zuntum Exp $
 #
 
 DISTNAME=	gqview-0.10.1
@@ -6,7 +6,7 @@ CATEGORIES=	graphics x11
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=gqview/}
 
 MAINTAINER=	wiz@netbsd.org
-HOMEPAGE=	http://gqview.sourceforge.net/index.html
+HOMEPAGE=	http://gqview.sourceforge.net/
 COMMENT=	another gtk-based graphic file viewer
 
 DEPENDS+=	gdk-pixbuf>=0.9.0:../../graphics/gdk-pixbuf
